(ISA-263) selection list overflow style bug

--- a/frontend/src/ui/SelectionList/SelectionList.css
+++ b/frontend/src/ui/SelectionList/SelectionList.css
@@ -17,7 +17,7 @@
 
 .DragHandleWrapperLabel {
     flex: 1 1 auto;
-    overflow: hidden;
+    min-width: 0;
 }
 
 .DragHandleWrapperRemoveButton {
